--- a/_config.yml
+++ b/_config.yml
@@ -80,15 +80,14 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
+  name             : "Doğa Gürgünoğlu"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
-  employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  bio              : "Doctoral Student at KTH Royal Institute of Technology"
+  location         : "Stockholm, Sweden"
+  employer         : "KTH Royal Institute of Technology"
+  googlescholar    : "https://scholar.google.com/citations?user=1yJCccwAAAAJ&hl=en&oi=ao"
+  email            : "dogag@kth.se"
+  researchgate     : "https://www.researchgate.net/profile/Doga-Guerguenoglu"
   uri              :
   bitbucket        :
   codepen          :
@@ -103,13 +102,13 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "http://orcid.org/0000-0001-5048-331X"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : 
   vine             :
   weibo            :
   xing             :
