--- a/_config.yml
+++ b/_config.yml
@@ -93,22 +93,22 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "https://www.facebook.com/dgurgunoglu"
+  facebook         : "dgurgunoglu"
   foursquare       :
   github           : "dogagurgun"
   google_plus      :
   keybase          :
-  instagram        : "https://www.instagram.com/doginii_g/"
+  instagram        : "doginii_g"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/dgurgunoglu/"
+  linkedin         : "dgurgunoglu/"
   orcid            : "http://orcid.org/0000-0001-5048-331X"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/DogaGurgunoglu"
+  twitter          : "DogaGurgunoglu"
   vine             :
   weibo            :
   xing             :
