Update social media

--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "dgurgunoglu"
+  facebook         : 
   foursquare       :
   github           : "dogagurgun"
   google_plus      :
