--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Doğa Gürgünoğlu"
 title_separator          : "-"
 name                     : &name "Doğa Gürgünoğlu"
-description              : &description "Doctoral Student"
+description              : &description "Electrical Engineer"
 url                      : https://dogagurgun.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "dogagurgun/dogagurgun.github.io"
