--- a/_config.yml
+++ b/_config.yml
@@ -82,11 +82,11 @@ analytics:
 author:
   name             : "Doğa Gürgünoğlu"
   avatar           : "profile.png"
-  bio              : "Doctoral Student at KTH Royal Institute of Technology"
-  location         : "Stockholm, Sweden"
+  bio              : "Electrical Engineer"
+  location         : "Ankara, Türkiye"
   employer         : 
   googlescholar    : "https://scholar.google.com/citations?user=1yJCccwAAAAJ&hl=en&oi=ao"
-  email            : "dogag@kth.se"
+  email            : "dogagurgun@gmail.com"
   researchgate     : "https://www.researchgate.net/profile/Doga-Guerguenoglu"
   uri              :
   bitbucket        :
