--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Doğa Gürgünoğlu"
+title                    : "Dr. Doğa Gürgünoğlu"
 title_separator          : "-"
-name                     : &name "Doğa Gürgünoğlu"
+name                     : &name "Dr. Doğa Gürgünoğlu"
 description              : &description "Electrical Engineer"
 url                      : https://dogagurgun.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
