--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Doğa Gürgünoğlu"
+  name             : "Dr. Doğa Gürgünoğlu"
   avatar           : "profile.png"
   bio              : "Electrical Engineer"
   location         : "Ankara, Türkiye"
